# agentkit

./: README.md
.github/workflows/: unit_tests.yml
python/cdp-agentkit-core/: Makefile  pyproject.toml
python/cdp-agentkit-core/cdp_agentkit_core/actions/: __init__.py
python/cdp-agentkit-core/cdp_agentkit_core/actions/compound/: README.md  __init__.py  borrow.py  constants.py  portfolio_details.py  repay.py  supply.py  utils.py  withdraw.py
python/cdp-agentkit-core/cdp_agentkit_core/actions/weth/: __init__.py  constants.py  unwrap_eth.py  wrap_eth.py
python/cdp-agentkit-core/tests/actions/compound/: test_compound_borrow.py  test_compound_get_portfolio_details.py  test_compound_repay.py  test_compound_supply.py  test_compound_utils.py  test_compound_withdraw.py
python/cdp-agentkit-core/tests/actions/weth/: test_unwrap_eth.py  test_wrap_eth.py
python/cdp-agentkit-core/tests/factories/: asset_factory.py
python/coinbase-agentkit/: CHANGELOG.md
python/coinbase-agentkit/coinbase_agentkit/action_providers/compound/: compound_action_provider.py  constants.py  utils.py
python/coinbase-agentkit/tests/action_providers/compound/: test_compound_borrow.py  test_compound_portfolio.py  test_compound_provider.py  test_compound_repay.py  (+3 more)
python/examples/compound-chatbot/: README.md  chatbot.py  console_formatter.py  pyproject.toml
python/examples/compound-chatbot/config/: angel_investor_agent.yaml  financial_advisor_agent.yaml
python/examples/compound-finance-chatbot/: README.md  chatbot.py  pyproject.toml
typescript/agentkit/: CHANGELOG.md  README.md
(+5 files in other folders)
