[tool.poetry]
name = "compound-finance-chatbot"
version = "0.0.1"
description = "Compound Finance Chatbot Example"
authors = ["Michael Ghen <mike@mikeghen.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"
cdp-langchain = "^0.0.13"
cdp-agentkit-core = { path = "../../cdp-agentkit-core", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
